--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
+    <title>M-M</title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>M-M</header>
 
     <section>
         <div>
